Fix: DB connection

--- a/Service/.env
+++ b/Service/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGO_URI=mongodb+srv://saurabhkoovery90_db_user:Lyj8FkhfZ27mRdyv@cluster0.zgm1tfx.mongodb.net/TodoApp?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI=mongodb+srv://saurabhkoovery90_db_user:Lyj8FkhfZ27mRdyv@cluster0.zgm1tfx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
